crates/dora-ir/src/tests/snapshots/xvm_ir__tests__wasm__add_i32.snap
---
source: crates/dora-ir/src/tests/wasm.rs
expression: "test_module(&context, i32_type, block).as_operation()"
---
"builtin.module"() ({
  "func.func"() <{function_type = (i32) -> (), sym_name = "test_func"}> ({
  ^bb0(%arg0: i32, %arg1: i32):
    %0 = "wasm.add"(%arg0, %arg1) : (i32, i32) -> i32
  }) : () -> ()
}) : () -> ()
